fixed the jumping issue

--- a/src/cljs/webchange/editor_v2/activity_dialogs/form/action_unit/styles.scss
+++ b/src/cljs/webchange/editor_v2/activity_dialogs/form/action_unit/styles.scss
@@ -16,6 +16,9 @@ $units-margin: 6px;
     &:hover {
         .action-unit-menu {
             display: block;
+            position: absolute;
+            top: 5px;
+            right: 10px;
         }
     }
 
